# pycc

./: .bandit  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  build.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
examples/: custom_checker.py
pycc/: __init__.py  cli.py  config_generator.py  core.py  py.typed  runner.py  utils.py
tests/: __init__.py  test_cli.py  test_core.py
