[metadata]
name = your-project-name
version = 0.1.0
description = Your project description
author = RapidRabbit Software
author_email = pycc@rapidrabbit.software
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # Add your dependencies here

[options.packages.find]
exclude =
    tests*
    test*

[options.extras_require]
dev =
    black
    isort
    flake8
    pylint
    mypy
    bandit
    safety
    pydocstyle
    vulture
    radon

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    build,
    dist,
    *.egg-info

[pycodestyle]
max-line-length = 88
ignore = E203, W503

[pydocstyle]
convention = google
add_select = D100,D104,D105,D106,D107
add_ignore = D100,D104
